* добавлен дропаут в examples/fuzzy2jpeg;

* настройки exaples/MNIST.classifier и правки MNIST:
    - работа над ошибками;
    - перемешивание выборки;
    - инкапсуляция семплов;

* добавлен метод оптимизции Нестерова;
* добавлен отдельный тест для методов оптимизации;
* добавлен метод AbstractTutor::clone() для замены учителя налету;

* Изменен DataHolder::clone() для реализации паттерна Прототип; 
* Соответсвующие изменеия в Learnable;

* Добавлен интерфейс IDataHolder;

* Исправления в Makefile;

* Добавлен интерфейс ITensor;

* Перевод фронтенда на ITensor и IDataHolder;
* Добавлен оператор osteram<<Timer;
* изменено отображение времени в TestModel::elapsed();

* Добавлена абстрактная фабрика IBackendFactory;
* Добавлена фабрика бэкенда для работы с OpenMP BackendOpenMP;
* Масштабный рефакторинг фронтенда и тестов, дабы все работало;
* ... и все работает! Теперь можно легко добавить бэкенды для тензорной математики, например для CUDA.
* В ANN добавлен виртуальный метод build() для установки нужного бэкенда;
* В ANN добавлен метод shape() дабы форма каждого компонента сети была известна до вызова метода build();

* clone() перенесен из DataHolder и IDataHolder, добавлен метод makeEmptyObject();
* build() перенесен в IDataHolder, добавлен виртуальный метод allocate();
* в IDataHolder добавлен одномерный тензор с именем "*" для сквозного именования всего хранилища;
* все вычисления полностью вынесены в ITensor, в том числе и методы оптимизации:
    - optGrad() - градиентный метод с постоянным шагом;
    - optNesterov() - инерционный градиентный метод Нестерова;
* шаблон DataHolder теперь зависит от тензора;
* работа напрямую с DataHolder убрана из всех тестов, взамен используется фабрика. Теперь можно тестировать разные бэкенды.
* обновлены тесты;

* Tensor -> TensorOMP;

* добавлен AdamTutor и тесты к нему;

* исправлено возведение в степень оптимизаторе Адам;
* немного расширен тест для DataHolder;
