@@ -2,9 +2,11 @@ all:
 	make -C units
 	make -C MNIST.classifier
 	make -C fuzzy2jpeg
+	make -C MNIST.autoencoder
 run:
 	make -C units run
 clean:
 	make -C units clean
 	make -C MNIST.classifier clean
 	make -C fuzzy2jpeg clean
+	make -C MNIST.autoencoder clean
