@@ -137,3 +137,6 @@ TODO: подумать о переделке DataHolder/Tensor/tensormath  в А
 * исправлено возведение в степень оптимизаторе Адам;
 * немного расширен тест для DataHolder;
 
+* добавлен пример автоэнкодера (с генерацией html-отчета);
+* добавлен контейнер Comosition<> для создания составных моделей;
+* заменены указатели ANN<>* на shared_ptr<ANN<>>;
